@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2010-06-07"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20100607
-#define RUBY_PATCHLEVEL 267
+#define RUBY_PATCHLEVEL 268
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
